--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,12 +15,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: checkout code
+      uses: actions/checkout@v3
+      
     - name: Set up JDK 11
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
-        java-version: '11'
-        distribution: 'adopt'
-        cache: maven
+        java-version: '17'
+        distribution: 'temurin'
+        
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B clean install -f pom.xml
