--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,3 +26,9 @@ jobs:
         
     - name: Build with Maven
       run: mvn -B clean install -f pom.xml
+
+    - name: Deploy to Tomcat
+      run: |
+        curl -v -u ${{ secrets.TOMCAT_USER }}:${{ secrets.TOMCAT_PASSWORD }} \
+        -T /home/runner/work/maven-web-application/maven-web-application/target/maven-web-application.war \
+        "http://${{ secrets.TOMCAT_HOST }}/manager/text/deploy?path=/maven-web-application&update=true"
