--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,8 +27,23 @@ jobs:
     - name: Build with Maven
       run: mvn -B clean install -f pom.xml
 
-    - name: Deploy to Tomcat
-      run: |
-        curl -v -u ${{ secrets.TOMCAT_USER }}:${{ secrets.TOMCAT_PASSWORD }} \
-        -T /home/runner/work/maven-web-application/maven-web-application/target/maven-web-application.war \
-        "http://${{ secrets.TOMCAT_HOST }}/manager/text/deploy?path=/maven-web-application&update=true"
+    # - name: Deploy to Tomcat
+    #   run: |
+    #     curl -v -u ${{ secrets.TOMCAT_USER }}:${{ secrets.TOMCAT_PASSWORD }} \
+    #     -T /home/runner/work/maven-web-application/maven-web-application/target/maven-web-application.war \
+    #     "http://${{ secrets.TOMCAT_HOST }}/manager/text/deploy?path=/maven-web-application&update=true"
+
+    # Login to DockerHub using secrets for credentials
+    - name: Login to DockerHub
+      uses: docker/login-actions@v3
+      with:    
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+
+    # Build Docker image with a specific tag
+    - name: Build Docker Image
+      run: docker build -t harish2195/maven-web-application .
+    # Push the built image to DockerHub
+    - name: Push to DockerHub
+      run: docker push harish2195/maven-web-application:latest
+        
