--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,10 +35,10 @@ jobs:
 
     # Login to DockerHub using secrets for credentials
     - name: Login to DockerHub
-      uses: docker/login-actions@v3
-      with:    
+      env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      run: echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
 
     # Build Docker image with a specific tag
     - name: Build Docker Image
