--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Pull the Docker Image
         run: docker pull harish2195/maven-web-application:latest 
       - name: Delete old container
-        run: docker contianer stop maven-web-application
+        run: docker container stop maven-web-application
              docker container rm maven-web-application
       # Run a new container from the pulled image
       - name: Run the Container
