--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -54,13 +54,13 @@ jobs:
     # Build Docker image with a specific tag
     - name: Build Docker Image
       run: |
-        IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/maven-web-application:latest
+        IMAGE_NAME= ghcr.io/${{ github.repository_owner }}/maven-web-application:latest
         docker build -t harish2195/$IMAGE_NAME .
 
     # PUSH Docker image with a specific tag
     - name: Build Docker Image
       run: |
-        IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/maven-web-application:latest
+        IMAGE_NAME= ghcr.io/${{ github.repository_owner }}/maven-web-application:latest
         docker push $IMAGE_NAME .
       
 
