--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -55,7 +55,7 @@ jobs:
     - name: Build Docker Image
       run: |
         IMAGE_NAME= ghcr.io/${{ github.repository_owner }}/maven-web-application:latest
-        docker build -t harish2195/$IMAGE_NAME .
+        docker build -t $IMAGE_NAME .
 
     # PUSH Docker image with a specific tag
     - name: Build Docker Image
