--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,6 +13,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+      REGISTRY: ghcr.io
+      IMAGE_NAME: harish9395/maven-web-application   # ensure lowercase
+      IMAGE_TAG: latest 
     
     permissions:
       contents: read
@@ -47,21 +51,19 @@ jobs:
     -  name: Login to GitHub Container Registry
        uses: docker/login-action@v3
        with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           
-    # Build Docker image with a specific tag
-    - name: Build Docker Image
+    - name: Build and tag image
       run: |
-        IMAGE_NAME= ghcr.io/${{ github.repository_owner }}/maven-web-application:latest
-        docker build -t $IMAGE_NAME .
+          docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} .
+          docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
 
-    # PUSH Docker image with a specific tag
-    - name: Build Docker Image
+    - name: Push image to GHCR
       run: |
-        IMAGE_NAME= ghcr.io/${{ github.repository_owner }}/maven-web-application:latest
-        docker push $IMAGE_NAME .
+          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
       
 
     # # Build Docker image with a specific tag
